Fixed drop down menu going out of bounds on right side, fixed full-screen class, updating button docs

--- a/src/header.css
+++ b/src/header.css
@@ -141,6 +141,7 @@
     background-color: #fff;
         position: absolute;
     top: 95%;
+    right: 0;
     z-index: 1000;
     float: left;
     min-width: 160px;
