--- a/src/layout.css
+++ b/src/layout.css
@@ -63,8 +63,6 @@ section {
 .hero-img {
   /* Specify the backgroud image yourself */
   background-size: cover;
-width: 100%;
-height: 100%;
 }
 
 .parallax-img {
